--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,8 @@ body {
   font-size: 15px;
   font-family: monospace;
 }
+.segundoBoton:hover
+{
+  animation: pulse;
+  animation-duration: 2s; 
+}
